--- a/app/src/main/res/layout/activity_team_reg.xml
+++ b/app/src/main/res/layout/activity_team_reg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,12 +11,10 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="244dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="107dp"
-        android:layout_marginStart="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:text="Adventurers"
         android:textColor="#FFFFFF"
         android:textSize="43dp"
@@ -29,22 +27,19 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="200dp"
-        android:layout_height="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
-        android:layout_marginEnd="125dp"
-        android:layout_marginStart="35dp"
         android:text="Enter your Registration Numbers."
         android:textColor="#FFFFFF"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/cardView1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.627"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
 
         android:id="@+id/cardView1"
         android:layout_width="290dp"
@@ -74,12 +69,12 @@
             android:background="@null"
             android:textColorHint="#FFFFFF"
             android:textCursorDrawable="@null"
-            android:inputType="text"
+            android:inputType="textCapCharacters"
             />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
 
         android:id="@+id/cardView2"
         android:layout_width="290dp"
@@ -110,11 +105,11 @@
             android:background="@null"
             android:textColorHint="#FFFFFF"
             android:textCursorDrawable="@null"
-            android:inputType="text"
+            android:inputType="textCapCharacters"
             />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
 
         android:id="@+id/cardView3"
         android:layout_width="290dp"
@@ -145,11 +140,11 @@
             android:background="@null"
             android:textCursorDrawable="@null"
             android:maxLines="1"
-            android:inputType="text"
+            android:inputType="textCapCharacters"
             />
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
     <Button
@@ -166,4 +161,4 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
